# bielik

./: .dockerignore  .env.example  .gitignore  CONFIGURATION_MIGRATION.md  CONTRIBUTING.md  Dockerfile  Dockerfile.simple  Dockerfile.test  GOAL.md  MANIFEST.in  Makefile  README.md  changelog.md  docker-compose.simple.yml  docker-compose.test.yml  docker-compose.yml  docker-test-runner.py  environment.yml  install.bat  install.py  install.sh  install_bielik.sh  install_conda.sh  pyproject.toml  quick-install.bat  quick-install.sh  run.py  run.sh  setup.cfg  test-docker.sh  test.txt  todo.md
.github/workflows/: python-publish.yml
bielik/: __main__.py  cli.py  client.py  config.py  content_processor.py  folder_scanner.py  hf_models.py  hf_models.py.orig  image_analyzer.py  optimized_loading.py  progress_logger.py  project_manager.py  server.py  validators.py
bielik/cli/: __init__.py  command_api.py  commands.py  main.py  models.py  send_chat.py  settings.py  setup.py
bielik/client/: __init__.py  core.py  model_manager.py  utils.py
bielik/config/: bielik_models.json
bielik/models/: local_runner.py  local_runner_backup.py  model_exceptions.py  model_loading.py  model_manager.py  model_registry.py
commands/calc/: config.json  main.py  package.json  pyproject.toml
commands/folder/: config.json  main.py  package.json  pyproject.toml
commands/pdf/: config.json  main.py  package.json  pyproject.toml
commands/project/: main.py  package.json  pyproject.toml
docker/: Dockerfile.full  Dockerfile.minimal  Dockerfile.test-alpine  Dockerfile.test-arch  Dockerfile.test-centos  Dockerfile.test-debian  Dockerfile.test-oneliner  Dockerfile.test-ubuntu  docker-compose.yml  test-multiplatform.yml
docker/test-scripts/: example-full.sh  example-minimal.sh  run-all-tests.sh
docs/: API.md  ARCHITECTURE.md  CONTEXT_PROVIDERS.md  CONTRIBUTING.md  DOCKER.md  INSTALLATION.md  README.md  USAGE.md
scripts/: build.sh  bump-version.py  clean.sh  conda-env.sh  docker-test.sh  install_deps.sh  install_minimal.sh  lint.sh  list-scripts.sh  publish.sh  setup_conda.sh  setup_drivers.py  test-commands.sh  test-python.sh  troubleshoot-install.sh  universal-install.sh  verify_installation.py  version_manager.py
tests/: __init__.py  test_cli.py  test_server.py
